feat: altera html

--- a/front/index.html
+++ b/front/index.html
@@ -15,6 +15,7 @@
         <button id="delete-button">Deleção</button>
     </div>
 
+    <!-- Aba de Criação de Carros -->
     <div id="create-tab" class="tab">
         <h2>Criação de Carros</h2>
         <input type="text" id="create-nome" placeholder="Nome">
@@ -22,6 +23,7 @@
         <button id="create-submit">Criar Carro</button>
     </div>
 
+    <!-- Aba de Edição de Carros -->
     <div id="edit-tab" class="tab">
         <h2>Edição de Carros</h2>
         <select id="edit-select"></select>
@@ -30,15 +32,20 @@
         <button id="edit-submit">Confirmar Edição</button>
     </div>
 
+    <!-- Aba de Deleção de Carros -->
     <div id="delete-tab" class="tab">
         <h2>Deleção de Carros</h2>
         <select id="delete-select"></select>
         <button id="delete-submit">Confirmar Deleção</button>
     </div>
 
+    <!-- Aba de Listagem de Carros -->
+    <div id="list-tab" class="tab">
+        <h2>Listagem de Carros</h2>
+        <div id="list-content"></div>  <!-- Div que vai exibir os carros -->
+    </div>
 </div>
 
 <script src="script.js"></script>
 </body>
 </html>
-
